--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/react-beautiful-dnd": "^13.1.4"
+    "@types/react-beautiful-dnd": "^13.1.4",
+    "tailwind-scrollbar": "^3.0.5"
   }
 }
