--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react-beautiful-dnd": "^13.1.4",
+    "@types/uuid": "^9.0.2",
     "tailwind-scrollbar": "^3.0.5"
   }
 }
